# Ted

./: .gitignore  Makefile  apt-get-prerequisites.sh  arch-pacman-prerequisites.sh  netbsd-prerequisites.sh  openbsd-prerequisites.sh  opensolaris-prerequisites.sh  ted-2.23-1.spec  yum-prerequisites.sh  zypper-prerequisites.sh
appFrame/: aclocal.m4  appApplication.c  appApplicationMotif.c  appButtonGtk.c  appButtonMotif.c  appColorChooser.c  appColorChooser.h  appColorGtk.c  appColorMotif.c  appCopyPaste.c  appCopyPasteGtk.c  appCopyPasteMotif.c  appDialogGtk.c  appDialogMotif.c  appDocMetricRuler.c  appDocument.c  appDocumentFormat.c  appDocumentGtk.c  appDocumentMotif.c  appDrawMotif.c  appDrawPage.c  appDrawXft.c  appDrawnPulldown.c  appDrawnPulldown.h  appDrawnPulldownGtk.c  appDrawnPulldownMotif.c  appEventGtk.c  appEventMotif.c  appFileChooser.c  appFileChooser.h  appFileChooserGtk.c  appFileChooserMotif.c  appFindTool.c  appFindTool.h  appFindX11Fonts.h  appFontConfig.c  appFontGtk.c  appFontMotif.c  appFontTool.c  appFontTool.h  (+128 more)
docBuf/: configure  configure.in  docBlockFrame.h  docBuf.c  docBuf.h  docBufConfig.h.in  docCalculateHyperlinkField.c  docCalculateIncludePictureField.c  docCalculateListtextField.c  docCalculateMergeField.c  docCalculateRefField.c  docCalculateSeqField.c  docCalculateSymbolField.c  docCellNode.h  docChftnField.c  docCollectStatistics.c  docCollectStatistics.h  docDebug.c  docDebug.h  docDebugFields.c  docDebugNode.c  docDebugObject.c  docDebugValues.c  docDelimitField.c  docDocpropField.c  docDocumentNote.h  docDocumentSelection.c  docDocumentTree.c  docDocumentTree.h  docDrawingShapeList.c  docDrawingShapeList.h  docEvalField.c  docEvalField.h  docField.c  docField.h  docFieldAdm.c  docFind.c  docFind.h  docFindBookmark.c  docFindInParagraph.c  (+52 more)
docEdit/: configure  configure.in  docCalculateToc.c  docCalculateToc.h  docCopyNode.h  docCopyNodeTree.c  docCopyParagraph.c  docDocumentCopyJob.c  docDocumentCopyJob.h  docEdit.c  docEdit.h  docEditAdmin.c  docEditChangeDocumentProperties.c  docEditChangeParaProperties.c  docEditChangeTableProperties.c  docEditCommand.h  docEditConfig.h.in  docEditCopyProperties.c  docEditDocumentTree.c  docEditField.c  docEditImpl.h  docEditInsertNode.c  docEditList.c  docEditListImpl.c  docEditMakeField.c  docEditNodeProperties.c  docEditNodeTree.c  docEditNotes.c  docEditOperation.c  docEditOperation.h  docEditParagraph.c  docEditSection.c  docEditSetProperties.c  docEditSetProperties.h  docEditStep.c  docEditStep.h  docEditTable.c  docEditTrace.c  docEditTrace.h  docFontReport.c  (+19 more)
docFont/: configure  configure.in  cssFontFamily.c  docExpandedTextAttribute.c  docExpandedTextAttribute.h  docFontConfig.h.in  makefile.in  utilDocFont.c  utilDocFont.h  utilDocFontList.c  utilDocFontList.h  utilMatchFont.c  utilMatchFont.h
docRtf/: configure  configure.in  docPlainRead.c  docPlainReadWrite.h  docPlainWrite.c  docRtfBorderProperties.c  docRtfConfig.h.in  docRtfControlWord.h  docRtfDrawingObject.c  docRtfFlags.h  docRtfFrameProperties.c  docRtfListOverrideTable.c  docRtfParaNumber.c  docRtfRead.c  docRtfReadCellProperties.c  docRtfReadColorTable.c  docRtfReadDocumentProperties.c  docRtfReadDocumentTree.c  (+53 more)
(+801 files in other folders)
