dnl Process this file with autoconf to produce a configure script.
AC_INIT(appMain.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for header files.
AC_PATH_XTRA
AC_PATH_XPM

# In this order:
AC_PATH_FT2
AC_HAVE_FONTCONFIG
AC_PATH_XFT

AC_HEADER_STDC

AC_PATH_GTK
AC_PATH_MOTIF

AC_SUBST(CC)
AC_SUBST(CFLAGS)

AC_INSTALL_LOCATIONS
AC_CHOOSE_GUI

AC_CONFIG_HEADER(appFrameConfig.h)
AC_OUTPUT(makefile)
