dnl Process this file with autoconf to produce a configure script.
AC_INIT(docEdit.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_SUBST(CC)
AC_SUBST(CFLAGS)

AC_CONFIG_HEADER(docEditConfig.h)
AC_OUTPUT(makefile)
