dnl Process this file with autoconf to produce a configure script.
AC_INIT(uniUtf8.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

AC_HEADER_STDC

AC_PATH_ICONV

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_C_BIGENDIAN
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(unsigned short)
AC_CHECK_SIZEOF(unsigned int)
AC_CHECK_SIZEOF(unsigned long)

AC_SUBST(CC)
AC_SUBST(CFLAGS)

AC_CONFIG_HEADER(textEncodingConfig.h)
AC_OUTPUT(makefile)
