dnl Process this file with autoconf to produce a configure script.
AC_INIT(psPrint.c)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_MEMCMP

AC_SUBST(CC)
AC_SUBST(CFLAGS)

AC_CONFIG_HEADER(utilPsConfig.h)
AC_OUTPUT(makefile)
